fix(ui): fix scrollbar and margins

--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,6 @@ h2 {
 	animation: spin 5s linear infinite;
 }
 
-::-webkit-scrollbar {
-  display: none
-}
-
 @keyframes spin {
 	from {
 		transform: rotate(0deg);
